--- a/pet_clinic/pom.xml
+++ b/pet_clinic/pom.xml
@@ -68,6 +68,12 @@
 		    <version>5.3.9</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
