Strangle fit application

--- a/pet_clinic/src/main/resources/application.properties
+++ b/pet_clinic/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8060
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #Banco local
-spring.datasource.url= jdbc:postgresql://localhost:5432/pet-clinic
+spring.datasource.url= jdbc:postgresql://localhost:5432/pet-clinic-legacy
 spring.datasource.username=petclinic
 spring.datasource.password=pet-show
 spring.jpa.hibernate.ddl-auto=update
