--- a/Consultas/src/main/resources/application.properties
+++ b/Consultas/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=9033
+
+#Banco local
+spring.datasource.url= jdbc:postgresql://localhost:5432/pet-clinic
+spring.datasource.username=petclinic
+spring.datasource.password=pet-show
+spring.jpa.hibernate.ddl-auto=update
